--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,7 +162,7 @@ importFrom("stats", "as.formula", "asOneSidedFormula",  "fitted", "fitted.values
                     "formula", "median", "model.matrix", "na.omit", "optim", 
                     "pchisq", "pf", "predict", "pt", "qnorm", "qt", "quantile", 
                     "resid", "pnorm", "rnorm", "runif", "simulate", 
-                    "terms", "terms.formula", "update.formula")
+                    "terms", "terms.formula", "update.formula", "var")
 importFrom("devtools", "load_all")
 importFrom("RColorBrewer", "brewer.pal")
 importFrom("grDevices", "savePlot")
@@ -171,16 +171,16 @@ importFrom("dplyr", "anti_join", "left_join")
 importFrom("methods", "formalArgs", "getFunction", "languageEl", "languageEl<-", "validObject")
 importFrom("nloptr", "bobyqa")
 importFrom("qqplotr", "stat_qq_band","stat_qq_line", "stat_qq_point")
-
 importFrom("reshape2", "melt")
+importFrom("stringr", "str_c", "str_count", "str_length", "str_locate", "str_locate_all", 
+           "str_replace", "str_replace_all", "str_split", "str_split_1", "str_sub", "str_trim")
+importFrom("sticky", "sticky")
+importFrom("tryCatchLog", "tryCatchLog")
 importFrom("utils", "data", "capture.output", "getFromNamespace", "sessionInfo", "tail")
 importFrom("utils", "packageVersion")
 importFrom("foreach", "foreach", "%do%", "%dopar%")
 importFrom("parallel", "makeCluster", "stopCluster", "detectCores", "nextRNGStream")
 importFrom("doParallel", "registerDoParallel")
-importFrom("stringr", "str_c", "str_count", "str_length", "str_locate", "str_locate_all", 
-           "str_replace", "str_replace_all", "str_split", "str_split_1", "str_sub", "str_trim")
-importFrom("sticky", "sticky")
 S3method(addBacktransforms, alldiffs)
 S3method(addSpatialModel, asrtests)
 S3method(addSpatialModelOnIC, asrtests)
