--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,8 +174,9 @@ importFrom("methods", "formalArgs", "getFunction", "languageEl", "languageEl<-",
 importFrom("nloptr", "bobyqa")
 importFrom("qqplotr", "stat_qq_band","stat_qq_line", "stat_qq_point")
 importFrom("reshape2", "melt")
-importFrom("stringr", "str_c", "str_count", "str_length", "str_locate", "str_locate_all", 
-           "str_replace", "str_replace_all", "str_split", "str_split_1", "str_sub", "str_trim")
+importFrom("stringr", "str_c", "str_count", str_detect, "str_length", 
+           "str_locate", "str_locate_all", "str_replace", "str_replace_all", 
+           "str_split", "str_split_1", "str_split_i", "str_sub", "str_trim")
 importFrom("sticky", "sticky")
 importFrom("tryCatchLog", "tryCatchLog")
 importFrom("utils", "data", "capture.output", "getFromNamespace", "sessionInfo", "tail")
